; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-appleir.c_key_down.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-appleir.c_key_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_device = type { i32 }
%struct.appleir = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hid_device*, %struct.appleir*, i32)* @key_down to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @key_down(%struct.hid_device* %0, %struct.appleir* %1, i32 %2) #0 {
  %4 = alloca %struct.hid_device*, align 8
  %5 = alloca %struct.appleir*, align 8
  %6 = alloca i32, align 4
  store %struct.hid_device* %0, %struct.hid_device** %4, align 8
  store %struct.appleir* %1, %struct.appleir** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.appleir*, %struct.appleir** %5, align 8
  %8 = getelementptr inbounds %struct.appleir, %struct.appleir* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @input_report_key(i32 %9, i32 %10, i32 1)
  %12 = load %struct.appleir*, %struct.appleir** %5, align 8
  %13 = getelementptr inbounds %struct.appleir, %struct.appleir* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @input_sync(i32 %14)
  ret void
}

declare dso_local i32 @input_report_key(i32, i32, i32) #1

declare dso_local i32 @input_sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
